src/tui/app/src/chatwidget/snapshots/lha_tui__chatwidget__tests__unified_exec_wait_after_final_agent_message.snap
---
source: src/tui/app/src/chatwidget/tests.rs
assertion_line: 2849
expression: combined
---
↳ Interacted with background terminal · cargo test -p lha-agent
  └ (waited)

• Final response.
