src/tui/app/src/chatwidget/snapshots/lha_tui__chatwidget__tests__unified_exec_wait_before_streamed_agent_message.snap
---
source: src/tui/app/src/chatwidget/tests.rs
assertion_line: 2889
expression: combined
---
↳ Interacted with background terminal · cargo test -p lha-agent
  └ (waited)

• Streaming response.
