src/tui/app/src/chatwidget/snapshots/lha_tui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: src/tui/app/src/chatwidget/tests.rs
assertion_line: 2964
expression: rendered
---
• Waiting for background terminal (0s • esc to …
  └ cargo test -p lha-agent -- --exact


› Ask LHA to do anything

  gpt-5.3-codex · 100% left
