src/tui/app/src/chatwidget/snapshots/lha_tui__chatwidget__tests__unified_exec_waiting_multiple_empty_after.snap
---
source: src/harness/tui/src/chatwidget/tests.rs
expression: combined
---
↳ Interacted with background terminal · just fix
  └ (waited)
